@@ -1,0 +1,38 @@
+package org.restlet.example.book.restlet.ch05.sec2.sub6;
+
+import org.restlet.Application;
+import org.restlet.Restlet;
+import org.restlet.Server;
+import org.restlet.data.Protocol;
+import org.restlet.routing.Router;
+
+/**
+ * Routing to annotated server resources.
+ */
+public class MailServerApplication extends Application {
+
+    /**
+     * Launches the application with an HTTP server.
+     * 
+     * @param args
+     *            The arguments.
+     * @throws Exception
+     */
+    public static void main(String[] args) throws Exception {
+        Server mailServer = new Server(Protocol.HTTP, 8182);
+        mailServer.setNext(new MailServerApplication());
+        mailServer.start();
+    }
+
+    /**
+     * Creates a root Router to dispatch call to server resources.
+     */
+    @Override
+    public Restlet createInboundRoot() {
+        Router router = new Router(getContext());
+        router.attach(
+                "http://localhost:8182/accounts/{accountId}/mails/{mailId}",
+                MailServerResource.class);
+        return router;
+    }
+}
